# vigyanpilot

./: .deployed  .dockerignore  .env.example  .env.example.production  .gitignore  .vercelignore  .zenodo.json  AGENTS.md  AUDIT_REPORT.md  CITATION.cff  Dockerfile  README.md  SUBMISSION_GUIDE.md  TASKS.md  biotools-payload.json  check_html_structure.py  demo.html  expand_faqs.py  expand_glossary.py  fix_all_seo.py  fix_excepts.py  fix_fstring_logging.py  fix_indexing.py  generate_sitemap.py  index.html  memory.md  middleware.js  package.json  producthunt-listing.md  pyproject.toml  rate_limiter.py  requirements-docking.txt  requirements.txt  secure_frontend.py  security_audit.py  start.sh  vercel.json  wsgi.py
api/: ncbi-blast.js
azure_worker/: Dockerfile.azure  Dockerfile.gpu  Dockerfile.overlay  deploy_aci.sh  preload_esmfold.py  set_docking_db.sh  stress_tester.py  validate_build.py  worker.py
backend/: .env.example  auth.py  config.py  database.py  deps.py  import_static_blogs.py  main.py  models.py  package-lock.json  package.json  pii_mask.py  requirements.txt  schemas.py  server.js
deploy/: dns-records.txt  docker-compose.yml  gunicorn.conf.py  healthcheck.sh  migrate-to-rds.sh  nginx.conf  run_migration.sh  setup-ec2.sh  setup-ssl.sh  trigger.py  vigyan.service
docs/: 00_START_HERE.md  BACKLINK_OUTREACH.md  CONTENT_CALENDAR.md  DELIVERABLES_CHECKLIST.md  DELIVERY_SUMMARY.md  DISASTER_RECOVERY.md  DPDP_COMPLIANCE.md  EXECUTIVE_SUMMARY.md  LINKEDIN_STRATEGY.md  MEASUREMENT_TRACKING.md  README.md  SALES_PLAYBOOK.md  SECURITY.md  SEO_STRATEGY.md
(+617 files in other folders)
