[project]
name = "vigyanpilot"
description = "VigyanLLM Primer Design Platform"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # naming
    "UP",   # pyupgrade
    "S",    # bandit security
    "BLE",  # blind except
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # allow assert
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = false  # start from loose, tighten gradually
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
